Fixed password layout and behavior, fixed settings pane visibility, some minor layout changes

--- a/src/scanner/static/css/common.css
+++ b/src/scanner/static/css/common.css
@@ -5,6 +5,7 @@
    width: 170px;
    left: 50%;
    margin-left: -65px;
+   margin-top: 50px;
 }
 
 .lang_switcher_passive
